# flik

./: .gitignore  README.md  setup.cfg
src/flik/: __init__.py  omdb.py  reviewtools.py  utils.py
