[metadata]
name = flik
version = 0.0.2
author = Dariush Bahrami
author_email = dariushbahrami1993@gmail.com
description = Flik, a Python Package for Film Buffs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dariush-bahrami/flik
project_urls =
    Bug Tracker = https://github.com/dariush-bahrami/flik/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    bs4
    fake_useragent

[options.packages.find]
where = src